test_suite/tests/compile_fail/rename_no_args.rs
use ronky::Exported;

#[derive(Exported)]
struct Test {
    #[arri(rename)]
    example: u8,
}

fn main() {}
